# 307gauss

./: .gitignore  CMakeLists.txt  Makefile  arm_bench.h  arm_file_io.h  arm_main.cpp  arm_main.h  arm_matrix_io.cpp  bench.c  bench_common.cpp  bench_common.h  bench_hls.cpp  bench_pc.cpp  bench_pc.h  gauss.c  gauss.h  gauss.py  gauss_fixed.cpp  gauss_fixed.h  gauss_fixed_hls.cpp  gauss_fixed_hls.h  gauss_hls_stream.cpp  gauss_hls_stream.h  gauss_var.cpp  gauss_var.h  io.c  io.cpp  io.h  launch_sdk.sh  main.h  main_pc.cpp  res-O3.txt  testdelete  testdelete.cpp
b/: bench.c  inverse.py
dataset/: gen_dataset.py  matrix0.txt  matrix_dataset.txt  matrix_golden.txt
